            Bangle.js: Add app ID option to setXYZPower to allow apps to share devices (power is on as long as one app wants the device) (fix #1971)
            Bangle.js: Add getXYZPower() functions
            BLE: Allow 128-bit service data to be decoded (fix #1976)
            Graphics: Fix 8 bit ArrayBuffer scroll not working correctly in some directions
 
     2v08 : nRF52: Added option to build in I2C slave support
            Fix Tensorflow aiGesture regression from 2v07 (re-add opcodes) (fix #1936)
            Add support for > 1bpp custom bitmap fonts
            Bangle.js: add drawLineAA and drawPolyAA for antialiased lines
            Removed custom fonts for SAVE_ON_FLASH devices
            Fixed BBC micro:bit show() regression from 2v07
            Ensure Storage library is exposed on SAVE_ON_FLASH devices (fix micro:bit flash write)
            nRF52: Fix issue where analogRead would stop E.getBattery from working
            Fix setWatch debounce lastTime regression from 2v07 (fix #1902)
            nRF52: CPU now sleeps when while UART/BLE data is waiting to be sent (fix #1938)
            JSON.stringify now checks for potential stack overflow when stringifying (fix #1940)
            Check for Stack overflow when Garbage Collecting giant linked list (fix #1765)
            Added String.padStart/padEnd
            Fix issue where JSON.stringify({ something: bool }) would output 'something' as a bool too
            Bangle.js/Pixl.js: Ensure terminal is always the same color regardless of g.setColor()
            Original Espruino Board: remove E.FFT in network-enabled builds (freeing up flash memory)
            Storage compact now updates pointers stored in RAM so they still point to the correct address in Flash (fix #1881)
            Bangle.js: Add debounce to the button used to wake Bangle.js up from sleep
            Fix regex match with '-' that isn't a range: "1-2_A3".split(/[0-]/) (fix #1736)